Fixed the modal signup jump

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -59,7 +59,18 @@ body {
   font-family: $family-sans-serif;
 }
 
+.container-fluid {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+}
+
 // Top Nav bar
+.navbar {
+  position: absolute;
+  top: 0;
+  width: 100vw;
+}
 nav {
   .profile-pic {
     width: 30px;
@@ -104,6 +115,7 @@ nav {
   top: 65px;
   bottom: 0;
   width: 100%;
+  // height: 100vh;
   height: calc(100vh - 65px);
 }
 
@@ -203,10 +215,10 @@ nav {
 .side-menu {
   width: $uiboxes;
   height: auto;
+  top: 135px;
   left: 15px;
   padding: 20px;
-  margin-top: 75px;
-  position: relative;
+  position: absolute;
   background: #f9f9f9;
   border-radius: 4px 0 4px 4px;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
@@ -461,7 +473,7 @@ nav {
     max-width: 260px;
   }
   .side-menu {
-    margin-top: 90px;
+    top: 150px;
 
     &-option {
       top: -40px;
@@ -500,5 +512,10 @@ nav {
     &.active {
       display: none !important;
     }
+  }
+
+  .modal-content,
+  .modal-card {
+    max-width: 90%;
   }
 }
